--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 # requirements.txt
 
 fastapi
-uvicorn[standard]  # Uvicorn adalah server untuk FastAPI
+uvicorn # Uvicorn adalah server untuk FastAPI
 pandas
 numpy
 joblib
-scikit-learn==1.3.0  # Wajib cocok dengan versi training
+scikit-learn  # Wajib cocok dengan versi training
 pydantic
+requests
